# chatgpt-rs

./: Cargo.toml  README.md
examples/: example_draft_email.rs  example_python.rs
src/: client.rs  types.rs
